include/dss_capi.h

    /*
    Name of harmonic current spectrrum shape.
    */
    DSS_CAPI_DLL char* Loads_Get_Spectrum(void);
    /*
    Response to load multipliers: Fixed (growth only), Exempt (no LD curve), Variable (all).
    */
    DSS_CAPI_DLL int32_t Loads_Get_Status(void);
    /*
    Maximum per-unit voltage to use the load model. Above this, constant Z applies.
    */
    DSS_CAPI_DLL double Loads_Get_Vmaxpu(void);
    /*
    Minimum voltage for unserved energy (UE) evaluation.
    */
    DSS_CAPI_DLL double Loads_Get_Vminemerg(void);
    /*
    Minimum voltage for energy exceeding normal (EEN) evaluations.
    */
    DSS_CAPI_DLL double Loads_Get_Vminnorm(void);
    /*
    Minimum voltage to apply the load model. Below this, constant Z is used.
    */
    DSS_CAPI_DLL double Loads_Get_Vminpu(void);
    /*
    Rated service transformer kVA for load allocation, using AllocationFactor. Affects kW, kvar, and pf.
    */
    DSS_CAPI_DLL double Loads_Get_xfkVA(void);
    /*
    Neutral reactance for wye-connected loads.
    */
    DSS_CAPI_DLL double Loads_Get_Xneut(void);
    /*
    Name of yearly duration loadshape
    */
    DSS_CAPI_DLL char* Loads_Get_Yearly(void);
    DSS_CAPI_DLL void Loads_Set_AllocationFactor(double Value);
    DSS_CAPI_DLL void Loads_Set_Cfactor(double Value);
    DSS_CAPI_DLL void Loads_Set_Class_(int32_t Value);
    DSS_CAPI_DLL void Loads_Set_CVRcurve(char* Value);
    DSS_CAPI_DLL void Loads_Set_CVRvars(double Value);
    DSS_CAPI_DLL void Loads_Set_CVRwatts(double Value);
    DSS_CAPI_DLL void Loads_Set_daily(char* Value);
    DSS_CAPI_DLL void Loads_Set_duty(char* Value);
    DSS_CAPI_DLL void Loads_Set_Growth(char* Value);
    DSS_CAPI_DLL void Loads_Set_IsDelta(uint16_t Value);
    DSS_CAPI_DLL void Loads_Set_kva(double Value);
    DSS_CAPI_DLL void Loads_Set_kwh(double Value);
    DSS_CAPI_DLL void Loads_Set_kwhdays(double Value);
    DSS_CAPI_DLL void Loads_Set_Model(int32_t Value);
    DSS_CAPI_DLL void Loads_Set_NumCust(int32_t Value);
    DSS_CAPI_DLL void Loads_Set_PctMean(double Value);
    DSS_CAPI_DLL void Loads_Set_PctStdDev(double Value);
    DSS_CAPI_DLL void Loads_Set_Rneut(double Value);
    DSS_CAPI_DLL void Loads_Set_Spectrum(char* Value);
    DSS_CAPI_DLL void Loads_Set_Status(int32_t Value);
    DSS_CAPI_DLL void Loads_Set_Vmaxpu(double Value);
    DSS_CAPI_DLL void Loads_Set_Vminemerg(double Value);
    DSS_CAPI_DLL void Loads_Set_Vminnorm(double Value);
    DSS_CAPI_DLL void Loads_Set_Vminpu(double Value);
    DSS_CAPI_DLL void Loads_Set_xfkVA(double Value);
    DSS_CAPI_DLL void Loads_Set_Xneut(double Value);
    DSS_CAPI_DLL void Loads_Set_Yearly(char* Value);
    /*
    Array of 7  doubles with values for ZIPV property of the LOAD object
    */
    DSS_CAPI_DLL void Loads_Get_ZIPV(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Loads_Get_ZIPV but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Loads_Get_ZIPV_GR(void);
    DSS_CAPI_DLL void Loads_Set_ZIPV(double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL double Loads_Get_pctSeriesRL(void);
    /*
    Percent of Load that is modeled as series R-L for harmonics studies
    */
    DSS_CAPI_DLL void Loads_Set_pctSeriesRL(double Value);
    /*
    Relative Weighting factor for the active LOAD
    */
    DSS_CAPI_DLL double Loads_Get_RelWeight(void);
    /*
    Relative Weighting factor for the active LOAD
    */
    DSS_CAPI_DLL void Loads_Set_RelWeight(double Value);
    DSS_CAPI_DLL int32_t Loads_Get_Phases(void);
    DSS_CAPI_DLL void Loads_Set_Phases(int32_t Integer);